<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APro &#35270;&#39057;&#25773;&#25918;&#22120;</string>
    <string name="empty_video_message">&#26410;&#25214;&#21040;&#35270;&#39057;</string>
    <string name="video_list_title">&#35270;&#39057;&#21015;&#34920;</string>
    <string name="open_video_list">&#25171;&#24320;&#35270;&#39057;&#21015;&#34920;</string>
    <string name="video_manage">&#31649;&#29702;&#35270;&#39057;</string>
    <string name="video_count_format">&#20849; %1$d &#20010;&#35270;&#39057;&#65292;&#20849;&#21344;&#29992; %2$s</string>
    <string name="video_count_default">&#20849; 0 &#20010;&#35270;&#39057;&#65292;&#20849;&#21344;&#29992; 0 B</string>
    <string name="copyright_text">&#29256;&#26435;&#25152;&#26377; 2026 APro</string>
    <string name="manage_title">&#31649;&#29702;&#35270;&#39057;</string>
    <string name="manage_hint">&#38271;&#25353;&#32553;&#30053;&#22270;&#21487;&#26174;&#31034;&#21024;&#38500;&#25805;&#20316;</string>
    <string name="press_again_to_exit">&#20877;&#25353;&#19968;&#27425;&#36864;&#20986;</string>
    <string name="storage_permission_required">&#35835;&#21462;&#35270;&#39057;&#38656;&#35201;&#23384;&#20648;&#26435;&#38480;</string>
    <string name="widget_artwork_desc">&#19987;&#36753;&#23553;&#38754;</string>
    <string name="widget_cast">&#25237;&#23631;</string>
    <string name="widget_previous">&#19978;&#19968;&#39318;</string>
    <string name="widget_play_pause">&#25773;&#25918;&#25110;&#26242;&#20572;</string>
    <string name="widget_next">&#19979;&#19968;&#39318;</string>
    <string name="widget_lyrics">&#27468;&#35789;</string>
    <string name="widget_unknown_artist">&#26410;&#30693;&#27468;&#25163;</string>
    <string name="widget_unknown_track">&#26410;&#30693;&#27468;&#26354;</string>
    <string name="widget_device_format">&#35774;&#22791;&#65306;%1$s</string>
    <string name="widget_cast_tips">&#25237;&#23631;&#20837;&#21475;&#24050;&#39044;&#30041;</string>
    <string name="widget_lyrics_tips">&#27468;&#35789;&#38754;&#26495;&#24453;&#25509;&#20837;</string>
    <string name="playback_channel_name">&#38145;&#23631;&#25773;&#25918;&#25511;&#21046;</string>
    <string name="playback_channel_desc">&#22312;&#38145;&#23631;&#26174;&#31034;&#24403;&#21069;&#25773;&#25918;&#20449;&#24687;&#19982;&#24555;&#25463;&#25805;&#20316;</string>
    <string name="video_thumbnail">视频缩略图</string>
    <string name="hide_video_action">隐藏视频 %1$s</string>
    <string name="seek_time_format" translatable="false">%1$s / %2$s</string>
    <string name="seek_time_placeholder" translatable="false">00:00 / 00:00</string>
    <string name="speed_feedback_2x" translatable="false">2x</string>
    <string name="navigation_chevron" translatable="false">&gt;</string>
    <string name="hide_symbol" translatable="false">X</string>
</resources>
